--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,3 +84,10 @@ html, body {
 .error {
     border: 1px solid darkred;
 }
+
+.slider-button {
+    width: 150px;
+    position: absolute;
+    top: 30px;
+    right: 70px;
+}
